ported to android and imported android build setup